force-app/main/default/objects/GitHub_Issue__x/GitHub_Issue__x.object-meta.xml
<CustomObject>
    <description>GitHub Issue</description>
    <externalDataSource>GitHub_Data_Source</externalDataSource>
    <externalName>GitHub Issue</externalName>
    <label>GitHub Issue</label>
    <pluralLabel>GitHub Issues</pluralLabel>
</CustomObject>