force-app/main/default/objects/GitHub_Issue__x/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <description>Assignee</description>
    <externalDeveloperName>Assignee</externalDeveloperName>
    <label>Assignee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>