force-app/main/default/objects/GitHub_Issue__x/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>Closed Date</description>
    <externalDeveloperName>Closed_Date</externalDeveloperName>
    <label>Closed Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>