force-app/main/default/objects/GitHub_Issue__x/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <description>Closed Date</description>
    <externalDeveloperName>ClosedDate</externalDeveloperName>
    <label>Closed Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>