force-app/main/default/objects/GitHub_Issue__x/fields/Issue_URL__c.field-meta.xml
<CustomField>
    <fullName>Issue_URL__c</fullName>
    <description>Issue URL</description>
    <externalDeveloperName>Issue_URL</externalDeveloperName>
    <label>Issue URL</label>
    <type>Url</type>
</CustomField>