force-app/main/default/objects/GitHub_Issue__x/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <description>Number</description>
    <externalDeveloperName>Number</externalDeveloperName>
    <label>Number</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>