force-app/main/default/objects/GitHub_Issue__x/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <description>Owner Id</description>
    <externalDeveloperName>OwnerId</externalDeveloperName>
    <label>Owner Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>