force-app/main/default/objects/GitHub_Issue__x/fields/Pull_Request__c.field-meta.xml
<CustomField>
    <fullName>Pull_Request__c</fullName>
    <description>Pull Request</description>
    <externalDeveloperName>Pull_Request</externalDeveloperName>
    <label>Pull Request</label>
    <type>Url</type>
</CustomField>