force-app/main/default/objects/GitHub_Issue__x/fields/Repository_URL__c.field-meta.xml
<CustomField>
    <fullName>Repository_URL__c</fullName>
    <description>Repository_URL</description>
    <externalDeveloperName>Repository_URL</externalDeveloperName>
    <label>Repository Url</label>
    <type>Url</type>
</CustomField>