force-app/main/default/objects/GitHub_Issue__x/fields/RepositoryId__c.field-meta.xml
<CustomField>
    <fullName>RepositoryId__c</fullName>
    <description>Repository Id</description>
    <externalDeveloperName>RepositoryId</externalDeveloperName>
    <label>Repository Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>