force-app/main/default/objects/GitHub_Issue__x/fields/Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Updated_Date__c</fullName>
    <description>Updated Date</description>
    <externalDeveloperName>Updated_Date</externalDeveloperName>
    <label>Updated Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>