force-app/main/default/objects/GitHub_Issue__x/fields/UpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>UpdatedDate__c</fullName>
    <description>Updated Date</description>
    <externalDeveloperName>UpdatedDate</externalDeveloperName>
    <label>Updated Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>