force-app/main/default/objects/GitHub_Issue__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Title__c</columns>
    <columns>Issue_URL__c</columns>
    <columns>Assignee__c</columns>
    <columns>User__c</columns>
    <columns>Created_Date__c</columns>
    <columns>Number__c</columns>
    <columns>State__c</columns>
    <columns>Repository_URL__c</columns>
    <columns>RepositoryId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pull_Request__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>open</value>
    </filters>
    <label>My Open Issues</label>
</ListView>